--- a/style/style.less
+++ b/style/style.less
@@ -31,7 +31,7 @@ body {
 
 }
 
-section.author_detail_row {
+section.author-detail-row {  
   header {
     min-height: 70px;
     h3 {
@@ -39,11 +39,22 @@ section.author_detail_row {
         float: right;
       }
     }
-  }  
-
-  img#author_thumbnail {
-    margin: 0px 10px 20px 10px;
   }
+  section#author-metadata {      
+    margin-top: 10px;
+    margin-bottom: 10px;
+    div#author-thumbnail {
+      img {
+        margin: 0px 10px 20px 10px;
+      }
+    }
+    div#author-links {
+      ul#author-links-list {
+
+      }
+    }
+  }
+
 }
 
 table#custom_columns_table {  
