Login: jump directly to username field on load and make both fields required

--- a/templates/author_detail.html
+++ b/templates/author_detail.html
@@ -33,7 +33,7 @@
 			{% endif %}
 			</ul>
 		</div>
-		<div id="author-notes" class="ui-grid-c">
+		<div id="author-notes" class="ui-block-c">
 		{% if author.notes %}
 		{{author.notes}}
 		{% endif %}
