Set autofocus in configuration screen

--- a/templates/admin_configuration.html
+++ b/templates/admin_configuration.html
@@ -10,7 +10,7 @@
 	<fieldset data-role="fieldcontain">
 		<label for="calibre_dir">{{page.glob.langa.calibre_dir1}}</label>
 		<input name="calibre_dir" id="calibre_dir" type="text" 
-			value="{{page.glob.calibre_dir}}" placeholder="{{page.glob.langa.calibre_dir2}}" required/>
+			value="{{page.glob.calibre_dir}}" placeholder="{{page.glob.langa.calibre_dir2}}" required autofocus />
 		<p>{{page.glob.langa.calibre_dir_expl}}</p>					
 	</fieldset>	
 	<fieldset data-role="fieldcontain">
