Mail popup: popup must be explicitely closed.
The popup should be

--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -43,7 +43,7 @@
 		</div>
 	</div>
 	{% if kindle_format %}
-	    <div data-role="popup" id="kindlePopup" data-overlay-theme="a" data-theme="c" style="max-width:450px;" class="ui-corner-all" data-transition="pop">
+	    <div data-role="popup" id="kindlePopup" data-overlay-theme="a" data-theme="c" style="max-width:450px;" class="ui-corner-all" data-transition="pop" data-dismissible="false">
 	      <div data-role="header" data-theme="a" class="ui-corner-top">
 	        <h1>{{page.glob.langa.send_to_kindle}}</h1>
 	      </div>
